fix player overflow in firefox

--- a/app/components/control-bar/audio-player/styles.module.css
+++ b/app/components/control-bar/audio-player/styles.module.css
@@ -7,7 +7,7 @@
 	margin-right: auto; 
 	bottom: 25px;
 	transition: opacity 1s ease 0s; 
-	opacity: 0;
+	opacity: 0.5;
 	z-index: 1000;
 }
 
